--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
 </head>
 <body class="bg-gray-100 flex items-center justify-center min-h-screen p-4">
   <div class="container bg-white shadow-xl rounded-xl p-8 md:p-10 lg:p-12 max-w-4xl w-full mx-auto my-8">
+    
+    <div class="flex justify-center mb-8">
+        <img src="logo.png" alt="Logo de la Empresa" class="h-20 max-w-full"> </div>
+    
     <h1 class="text-4xl font-extrabold text-center text-gray-900 mb-8">Simulador de Crédito</h1>
 
     <div class="mb-6">
@@ -117,6 +121,9 @@
     const MAX_PARCELAS_EDIT = 20; // Define o número máximo de parcelas para edição
     const SENHA_MODO_EDICAO = "1234567"; // Senha para entrar no modo de edição
 
+    // Variável global para armazenar a imagem do logo carregada para o PDF
+    let logoDataUrl = ''; 
+
     function showModal(title, message) {
       document.getElementById('modalTitle').innerText = title;
       document.getElementById('modalMessage').innerText = message;
@@ -148,8 +155,6 @@
       }
     }
 
-    // Função que agora é chamada quando o botão é clicado.
-    // Ela verifica se o modo de edição já está ativo ou se precisa pedir a senha.
     function tentarEntrarModoEdicao() {
         if (modoEdicaoAtivo) {
             toggleModoEdicao(); // Se já estiver ativo, sai do modo
@@ -304,6 +309,19 @@
       const doc = new jsPDF();
       let y = 20;
 
+      // Adiciona o logo se estiver carregado
+      if (logoDataUrl) {
+          // X, Y, Largura, Altura. Ajuste os valores conforme a necessidade do seu logo
+          // Para centralizar o logo no topo: (doc.internal.pageSize.width - width) / 2
+          const logoWidth = 50; // Largura do logo no PDF
+          const logoHeight = 20; // Altura do logo no PDF (ajuste para manter a proporção)
+          const logoX = (doc.internal.pageSize.width - logoWidth) / 2;
+          const logoY = 10; // Posição Y no topo
+          doc.addImage(logoDataUrl, 'PNG', logoX, logoY, logoWidth, logoHeight);
+          y = logoY + logoHeight + 10; // Ajusta o ponto de partida do texto após o logo
+      }
+
+
       doc.setFont("helvetica", "bold");
       doc.setFontSize(20);
       doc.text("Presupuesto de Productos", 105, y, { align: "center" });
@@ -318,6 +336,19 @@
         if (y + 40 > doc.internal.pageSize.height - 20) {
           doc.addPage();
           y = 20;
+          // Repete o logo e título se a página virar
+          if (logoDataUrl) {
+              const logoWidth = 50; 
+              const logoHeight = 20;
+              const logoX = (doc.internal.pageSize.width - logoWidth) / 2;
+              const logoY = 10;
+              doc.addImage(logoDataUrl, 'PNG', logoX, logoY, logoWidth, logoHeight);
+              y = logoY + logoHeight + 10; 
+          }
+          doc.setFont("helvetica", "bold");
+          doc.setFontSize(20);
+          doc.text("Presupuesto de Productos", 105, y, { align: "center" });
+          y += 20;
         }
 
         doc.setFont("helvetica", "bold");
@@ -351,6 +382,20 @@
           if (y + 7 > doc.internal.pageSize.height - 20) {
             doc.addPage();
             y = 20;
+            // Repete o logo e título se a página virar
+            if (logoDataUrl) {
+                const logoWidth = 50; 
+                const logoHeight = 20;
+                const logoX = (doc.internal.pageSize.width - logoWidth) / 2;
+                const logoY = 10;
+                doc.addImage(logoDataUrl, 'PNG', logoX, logoY, logoWidth, logoHeight);
+                y = logoY + logoHeight + 10; 
+            }
+            doc.setFont("helvetica", "bold");
+            doc.setFontSize(20);
+            doc.text("Presupuesto de Productos", 105, y, { align: "center" });
+            y += 20;
+
             doc.setFont("helvetica", "bold");
             doc.setFontSize(10);
             doc.setFillColor(230, 230, 230);
@@ -522,6 +567,28 @@
       });
     }
 
+    // Função para carregar a imagem do logo e converter para Data URL
+    async function loadLogoForPDF() {
+        try {
+            const response = await fetch('logo.png'); // Altere para o nome do seu arquivo de logo
+            if (!response.ok) {
+                console.warn('Advertencia: El archivo de logo "logo.png" no fue encontrado. El PDF se generará sin logo.');
+                return; // Não lança erro, apenas não carrega o logo
+            }
+            const blob = await response.blob();
+            return new Promise((resolve) => {
+                const reader = new FileReader();
+                reader.onloadend = () => {
+                    resolve(reader.result);
+                };
+                reader.readAsDataURL(blob);
+            });
+        } catch (error) {
+            console.error('Error al cargar la imagen del logo:', error);
+            return null; // Retorna nulo em caso de erro
+        }
+    }
+
     async function carregarDadosProdutos() {
         const loadingIndicator = document.getElementById('loadingIndicator');
         const fileNameSpan = document.getElementById('fileName');
@@ -592,11 +659,12 @@
         }
     }
 
-    // Carrega os dados da planilha e adiciona os campos iniciais ao carregar a página
-    window.onload = function() {
-        carregarDadosProdutos();
+    // Carrega os dados da planilha, adiciona os campos iniciais e carrega o logo ao carregar a página
+    window.onload = async function() {
+        await carregarDadosProdutos();
         adicionarProduto();
         adicionarParcela();
+        logoDataUrl = await loadLogoForPDF(); // Carrega o logo e armazena na variável global
     };
   </script>
 </body>
