--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <h2 class="text-3xl font-extrabold text-center text-gray-900 mb-6">Iniciar Sesión</h2>
     <div class="mb-4">
       <label for="username" class="block text-sm font-medium text-gray-700 mb-1">Usuario</label>
-      <input type="text" id="username" class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500 text-base" placeholder="admin">
+      <input type="text" id="username" class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500 text-base" placeholder="Dig. Usuario">
     </div>
     <div class="mb-6">
       <label for="password" class="block text-sm font-medium text-gray-700 mb-1">Contraseña</label>
